--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,14 +14,15 @@
 <ln class="font-weight-bold">zipcode |</ln>
 {{user_info.zipcode}}
 </p>
-</div>
     <form method="get" action="/profile_edit">
+    	<div class="edit_btn_profile">
     <button type="submit" 
-            id="edit_btn"
             class="btn btn-primary mb-2" 
             name="edit"
             value="edit">Edit
     </button>
+    	</div>
     </form>
+</div>
 </div>
 {% endblock %}
