--- a/templates/article_details.html
+++ b/templates/article_details.html
@@ -51,7 +51,10 @@
     </button>
     {% endif %}
     {% if current_article.is_loanable and current_article.owner_id != current_user %}
-    <form method="post" action="mailto:{{article_owner.email}}" >
+        {% for i in current_article.images %}
+        
+    <form method="post" action="mailto:{{article_owner.email}}?subject=I%20want%20to%20Borrow&body={{i.img_url}}%0D%0APlease%20reply%20to:%20{{current_user_info.email}}">
+        {% endfor %}
     
     <button type="submit" 
            class="btn btn-primary mb-2" 
@@ -60,7 +63,10 @@
     </form>
     {% endif %}
     {% if current_article.is_giveaway and current_article.owner_id != current_user  %}
-     <form method="post" action="mailto:{{article_owner.email}}" >
+        {% for i in current_article.images %}
+        
+    <form method="post" action="mailto:{{article_owner.email}}?subject=I%20want%20it!!!&body={{i.img_url}}%0D%0APlease%20reply%20to:%20{{current_user_info.email}}">
+        {% endfor %}
     
     <button type="submit" 
            class="btn btn-primary mb-2" 
