--- a/templates/base.html
+++ b/templates/base.html
@@ -49,11 +49,18 @@
 <br>
 <div class="container">
 
-  	{% for msg in get_flashed_messages() %}
-    	<p class=flashes>
-    	{{ msg }}
-		</p>
-  	{% endfor %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+
+
+        {% for message in messages %}
+    <div class="alert alert-secondary" role="alert">
+    {{ message }}
+    </div>
+        {% endfor %}
+
+  {% endif %}
+{% endwith %}
 
 
   {% block content %} put your content here {% endblock %}
