--- a/templates/profile_edit.html
+++ b/templates/profile_edit.html
@@ -56,6 +56,13 @@
            class="btn btn-primary btn-sm" 
            value="Register">Update
     </button>
+
+<!-- 
+    <button action='/profile'
+            class="btn btn-primary btn-sm" 
+            value="Register">Cancel
+    </button> -->
+
 </div>
 
 </form>
