--- a/templates/base.html
+++ b/templates/base.html
@@ -65,9 +65,8 @@
 
   {% block content %} put your content here {% endblock %}
 </div>
-<footer>
-<br>
-<p class="small_text"> Created with &hearts; by acruzer. <br>- 2018 - </p>
+<footer id="internal" class="page-footer font-small blue pt-4">
+<p class="small_text_white"> Created with &hearts; by acruzer. <br>- 2018 - </p>
 </footer>
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 
