--- a/templates/base2.html
+++ b/templates/base2.html
@@ -15,7 +15,7 @@
 </head>
 <body class="login_page">
 <div class="text-center">
-	<img class="login_logo" src="static/logo_white.png">
+	<img class="login_logo img-responsive" src="static/logo_white.png">
 </div>
 {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -32,8 +32,7 @@
 
 {% block content %} put your content here {% endblock %}
 <footer>
-<br>
-<p class="small_text"> Created with &hearts; by acruzer. <br>- 2018 - </p>
+<p class="small_text_white"> Created with &hearts; by acruzer. <br>- 2018 - </p>
 </footer>
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 
