--- a/templates/login.html
+++ b/templates/login.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 
-<div class="row justify-content-md-center">
-<div class="col col-lg-4">
+<div class="row justify-content-center">
+<div class="col col-10 col-md-6 col-lg-4">
 <div class="login_box shadow rounded">
 <div id= class="col-8"><h2> Member Login </h2></div>
 
