--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base2.html' %}
 {% block content %}
-<div class="row justify-content-md-center">
-<div class="col col-lg-6">
+<div class="row justify-content-center">
+<div class="col col-10 col-md-8 col-lg-6">
 <div class="login_box shadow rounded">
 <div class="text-center">
     <a class="small_link" href="/login">Already a user?</a>
