Updated containers so closet view looks correct

--- a/templates/base2.html
+++ b/templates/base2.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,700i|Sofia" rel="stylesheet">
 
 </head>
+<div class="container-fluid">
 <body class="login_page">
 <div class="text-center">
 	<img class="login_logo img-responsive" src="static/logo_white.png">
@@ -39,6 +40,6 @@
 <!-- Bootstrap Js CDN -->
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
+</div>
 </body>
 </html>
