--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
 
 
 <br>
-<div class="container">
+<div class="container-fluid">
 
 {% with messages = get_flashed_messages() %}
   {% if messages %}
