--- a/templates/closet.html
+++ b/templates/closet.html
@@ -6,7 +6,7 @@
 <!-- <a href="/article_add">New Article</a> -->
 
 <div class="row">
-  <div class="col-md-2">
+  <div class="ccol-12 col-sm-4 col-md-3">
     <ul class="nav flex-column">
   <div class="side_bar">
   <li class="nav-item">
@@ -27,7 +27,7 @@
   </li>
   </div> -->
   <div class="side_bar">
-    
+
   {% for type in article_type %}
   <li class="nav-item">
     <a class="nav-link" href="?filter={{type.name}}">{{type.name}}</a>
@@ -37,13 +37,13 @@
 </ul>
 </div>
 
-<div class="col-md-9">
+<div class="col-sm-8 col-md-9">
 
 <div class="row">
 
 <!-- for article in request  -->
 {% for item in closet_info %}
-  <div class="col-md-4">
+  <div class="col-sm-6 col-md-4">
   <div class="shadow p-3 mb-5 bg-white rounded">
     <div class="item-list">
       {% if item.images %}
