Updated items details to show color

--- a/templates/article_details.html
+++ b/templates/article_details.html
@@ -30,6 +30,8 @@
         <br>
         <b>size | </b>{{current_article.size}}
         <br>
+        <b>color | </b>{{current_article.color}}
+        <br>
         <b>material | </b>{{current_article.material}}
         <br>
         <b>notes | </b>{{current_article.notes}}
